--- a/pages/Evaluation/Evaluation.wxss
+++ b/pages/Evaluation/Evaluation.wxss
@@ -1,1 +1,76 @@
 /* pages/Evaluation/Evaluation.wxss */
+.eval-container {
+  height: 100vh;
+  background-color: rgb(241, 241, 241);
+  box-sizing: content-box;
+  padding: 0 10px;
+  overflow: auto;
+}
+.eval-container::before {
+  content: '';
+  display: table;
+}
+.eval-main {
+  min-height: 380px;
+  background-color: #fff;
+  padding: 10px;
+  margin-bottom: calc(80px + env(safe-area-inset-bottom));
+}
+.main-score {
+  height: 35px;
+  display: flex;
+  align-items: center;
+}
+textarea {
+  width: 100%;
+  color: #585858;
+}
+.eval-footer {
+  height: 60px;
+  padding: 8px 10px;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  padding-bottom: env(safe-area-inset-bottom);
+  left: 0;
+  right: 0;
+}
+.footer-left {
+  width: 40%;
+  height: 44px;
+  line-height: 44px;
+  margin-right: 10px;
+  text-align: center;
+  color: red;
+  box-sizing: border-box;
+  font-size: 15px;
+  border: 1px solid red;
+  border-radius: 5px;
+  transition: .3s;
+}
+.footer-left:active {
+  color: rgb(255, 188, 188);
+  border: 1px solid rgb(255, 188, 188);
+}
+.footer-right {
+  width: 60%;
+  height: 44px;
+  line-height: 44px;
+  text-align: center;
+  background-color: red;
+  font-size: 15px;
+  color: #fff;
+  border-radius: 5px;
+  transition: .3s;
+}
+.footer-right:active {
+  background-color: rgb(214, 22, 22);
+}
+.horizontal-line {
+  width: 100%;
+  height: 0.5px;
+  margin: 10px 0;
+  background-color: #e7e7e7;
+}
