--- a/pages/orderDetail/orderDetail.wxss
+++ b/pages/orderDetail/orderDetail.wxss
@@ -77,7 +77,7 @@
   width: 100%;
   height: 0.5px;
   margin: 10px 0;
-  background-color: #c7c7c7;
+  background-color: #e7e7e7;
 }
 .goods-item {
   position: relative;
@@ -118,6 +118,16 @@
   color: #979797;
   text-align: center;
 }
+.content-center {
+  height: 40px;
+  line-height: 40px;
+  display: flex;
+  justify-content: space-evenly;
+  border-radius: 5px;
+  margin-top: 10px;
+  padding: 5px;
+  background-color: #fff;
+}
 .content-bottom {
   min-height: 80px;
   display: flex;
@@ -156,6 +166,10 @@
   font-size: 15px;
   color: #fff;
   border-radius: 5px;
+  transition: .3s;
+}
+.footer-content:active {
+  background-color: rgb(214, 22, 22);
 }
 .footer-left {
   width: 40%;
@@ -168,6 +182,11 @@
   font-size: 15px;
   border: 1px solid red;
   border-radius: 5px;
+  transition: .3s;
+}
+.footer-left:active {
+  color: rgb(255, 188, 188);
+  border: 1px solid rgb(255, 188, 188);
 }
 .footer-right {
   width: 60%;
@@ -178,6 +197,10 @@
   font-size: 15px;
   color: #fff;
   border-radius: 5px;
+  transition: .3s;
+}
+.footer-right:active {
+  background-color: rgb(214, 22, 22);
 }
 .have-footer {
   height: calc(100vh - 250px - env(safe-area-inset-bottom));
